bundled_metadata/force-app/main/default/objects/AFH_Images__c/AFH_Images__c.object-meta.xml
<CustomObject>
    <description>this object created to store all the images which we are using for download with other details.</description>
    <label>AFH Images</label>
    <nameField>
        <displayFormat>DI-{0000}</displayFormat>
        <label>Images Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AFH Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>