bundled_metadata/force-app/main/default/objects/AFH_Images__c/fields/AFH_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>AFH_Brand_Name__c</fullName>
    <description>Stores the brand name of a product, Multiple brands can be chosen.</description>
    <label>Brand Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AFH_Brand</valueSetName>
    </valueSet>
</CustomField>