bundled_metadata/force-app/main/default/objects/AFH_Images__c/fields/AFH_Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>AFH_Channel_Type__c</fullName>
    <description>Stores the channels associated with the image. Multiple channels can be selected.</description>
    <label>Channel Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AFH_Channel</valueSetName>
    </valueSet>
</CustomField>