bundled_metadata/force-app/main/default/objects/AFH_Images__c/fields/AFH_Heading__c.field-meta.xml
<CustomField>
    <fullName>AFH_Heading__c</fullName>
    <description>Stores the primary heading shown with the image.</description>
    <label>Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>