bundled_metadata/force-app/main/default/objects/AFH_Images__c/fields/AFH_Is_Guest_Allowed__c.field-meta.xml
<CustomField>
    <fullName>AFH_Is_Guest_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Guest Allowed</label>
    <type>Checkbox</type>
</CustomField>