bundled_metadata/force-app/main/default/objects/AFH_Images__c/fields/AFH_IsActive__c.field-meta.xml
<CustomField>
    <fullName>AFH_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the image record is active and available for selection and download.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>