bundled_metadata/force-app/main/default/objects/AFH_Images__c/fields/AFH_Sub_Heading__c.field-meta.xml
<CustomField>
    <fullName>AFH_Sub_Heading__c</fullName>
    <description>Stores the secondary heading or subtitle shown with the image.</description>
    <label>Sub Heading</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>